# PERCEPTION

BBox-Label-Tool-master/: 001_list.txt  004_list.txt  convert.py  main.py
BBox-Label-Tool-master/Labels/001/: cone2_100.txt  cone2_103.txt  cone2_105.txt  cone2_106.txt  cone2_107.txt  cone2_110.txt  cone2_118.txt  cone2_120.txt  cone2_135.txt  cone2_136.txt  cone2_138.txt  cone2_141.txt  cone2_144.txt  cone2_147.txt  cone2_148.txt  cone2_150.txt  cone2_157.txt  cone2_169.txt  cone2_170.txt  cone2_171.txt  cone2_174.txt  cone2_189.txt  cone2_38.txt  cone2_53.txt  cone2_55.txt  cone2_84.txt  cone2_87.txt  cone2_93.txt  cone3_111.txt  cone3_120.txt  cone3_121.txt  cone3_125.txt  cone3_133.txt  cone3_144.txt  cone3_147.txt  cone3_150.txt  cone3_157.txt  cone3_173.txt  cone3_175.txt  cone3_176.txt  (+69 more)
BBox-Label-Tool-master/Labels/003/: cone1_15.txt  cone1_30.txt  cone1_4.txt  cone1_44.txt  cone1_45.txt  cone1_47.txt  cone1_50.txt  cone1_51.txt  cone1_52.txt  cone2_11.txt  cone2_15.txt  cone2_165.txt  cone2_17.txt  cone2_178.txt  cone2_195.txt  cone2_197.txt  cone2_217.txt  cone2_218.txt  cone2_22.txt  cone2_229.txt  cone2_274.txt  cone2_294.txt  cone2_3.txt  cone2_308.txt  cone2_72.txt  cone2_73.txt  cone3_108.txt  cone3_110.txt  cone3_116.txt  cone3_118.txt  cone3_119.txt  cone3_254.txt  cone3_261.txt  cone3_266.txt  cone3_276.txt  cone3_349.txt  cone3_384.txt  cone3_387.txt  cone3_393.txt  cone3_394.txt  (+23 more)
BBox-Label-Tool-master/Labels/004/: cone2_122.txt  cone2_123.txt  cone2_183.txt  cone2_184.txt  cone2_185.txt  cone2_60.txt  cone2_70.txt  cone3_104.txt  cone3_115.txt  cone3_117.txt  cone3_129.txt  cone3_130.txt  cone3_136.txt  cone3_137.txt  cone3_149.txt  (+22 more)
ball_follower/: CMakeLists.txt  package.xml
ball_follower/scripts/: no_teleop.py  perception.py
perception/: CMakeLists.txt  package.xml  perception.launch
perception/src/: WorldPositioner.cpp  WorldPositioner.h  read_image_node.cpp  tracker_node.cpp
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: TrackedObject.msg  TrackedObjects.msg
(+147 files in other folders)
