<?xml version="1.0"?>
<package format="2">

  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>
  <maintainer email="adept@todo.todo">adept</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>darknet_ros_msgs</depend>
  <depend>perception_msgs</depend>

</package>
