<?xml version="1.0"?>
<package format="2">

  <name>perception_msgs</name>
  <version>0.0.0</version>
  <description>The perception_msgs package</description>
  <maintainer email="adept@todo.todo">adept</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
